# 3D-Face-Modeling-Analysis-Capstone-Project

./: README.md  utilities.py
Capstone II Project - Richard/: CMakeLists.txt  README.md  debug_extract.py  demo_render.py  demo_render_turntable.py  requirements.txt  setup.py  test.py  testImage.py
Capstone II Project - Richard/face_renderer/: __init__.py  cache.py  make_head_only.py  obj_to_glb.py  render.py
Capstone II Project - Richard/face_renderer/_native/: bindings.cpp  renderer.cpp  renderer.h
Capstone II Project - Richard/out_face_week1/: FaceModel.json
Capstone II Project - Richard/out_face_week1/saved_json_file/: FaceModel.json
Capstone II Project - Richard/out_face_week2/: FaceModel.json
Capstone II Project - Richard/results/: test_mesh.glb
Capstone II Project - Richard/src/: create_face.py  face.py  make_head_only.py  make_head_only_draft.py  render_face.py  utilities.py
Capstone II Project - Richard/src/face_renderer/: cache.py  obj_to_glb.py
Capstone II Project - Richard/src/face_renderer/_native/: bindings.cpp  renderer.cpp  renderer.hpp  test_binding.cpp
Capstone II Project - Richard/src/faces/face_001/: FaceModel.json
Capstone II Project - Richard/src/faces/face_001/metadata/: meta.json
Capstone II Project - Richard/src/scripts/: test_obj_to_glb.py  test_render_native.py
Capstone II Project - Richard/tests/: diagnose.py  test_cache.py  test_conversion.py  test_make_head_conversion.py  test_obj_to_glb.py  test_renderer.py  test_week1.py  test_week2.py  test_week3.py  view_server.py
Capstone II Project - Richard/tests/assets/makehuman_raw/: identity_model.mhm  mesh.mtl
